--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "myaoo",
+  "name": "robot-gallery",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typerscript": "^0.2.3",
-    "web-vitals": "^1.1.1"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/three": "^0.131.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
+    "react-scripts": "4.0.0",
+    "three-orbitcontrols": "^2.110.3",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "ts-loader": "^9.1.2"
+    "typescript-plugin-css-modules": "^2.8.0"
   }
 }
