--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/echarts": "^4.9.10",
+    "@types/react": "^17.0.22",
+    "echarts": "^5.2.0",
+    "echarts-for-react": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "typerscript": "^0.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -37,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.14",
     "ts-loader": "^9.1.2"
   }
 }
